--- a/assets/styles/sitestyle.css
+++ b/assets/styles/sitestyle.css
@@ -17,15 +17,9 @@
   color: #EEF;
   scroll-behavior: smooth;
   color-scheme: light;
-  -webkit-hyphens: auto;
-      -ms-hyphens: auto;
-          hyphens: auto;
-  word-wrap: break-word;
-  word-break: break-all;
 }
 
 :root {
-  font-size: 1rem;
   font-family: "Exo", "Verdana";
   text-shadow: 0.01em 0.01em 0.1em #292929;
 }
@@ -33,6 +27,8 @@
 body {
   width: 100%;
   background: #050729;
+  overflow-x: hidden;
+  font-size: 1rem;
 }
 
 a {
@@ -89,13 +85,13 @@ button:hover,
 h1 {
   font-family: "Bebas Neue", "Arial";
   margin-bottom: 1em;
-  font-size: 4rem;
+  font-size: clamp(1.2em, 5vw, 4em);
   font-weight: 400;
 }
 
 h2 {
   margin-bottom: 1em;
-  font-size: 2rem;
+  font-size: clamp(1.1em, 4vw, 2em);
 }
 
 h3 {
@@ -185,6 +181,7 @@ video {
           justify-content: space-between;
   color: #EEF;
   background: linear-gradient(-30deg, #404296 70%, #eb2d6d 200%) no-repeat scroll 0;
+  font-size: clamp(1em, 2vw, 1.2em);
 }
 
 #app #appmain {
